schemas/0.2.2/docs/insula-stac-extension-oneof-basic-collection-properties-allof-collection-type-attributes.md
# Collection type attributes Schema

```txt
https://cgi-italy.github.io/insula/schemas/v0.2.0/stac/insula-stac-extension.schema.json#/oneOf/0/allOf/0
```



| Abstract            | Extensible | Status         | Identifiable | Custom Properties | Additional Properties | Access Restrictions | Defined In                                                                                                   |
| :------------------ | :--------- | :------------- | :----------- | :---------------- | :-------------------- | :------------------ | :----------------------------------------------------------------------------------------------------------- |
| Can be instantiated | No         | Unknown status | No           | Forbidden         | Allowed               | none                | [insula-stac-extension.schema.json\*] (schemas/stac/insula-stac-extension.schema.json) |

## 0 Type

`object` ([Collection type attributes](insula-stac-extension-oneof-basic-collection-properties-allof-collection-type-attributes.md))

# 0 Properties

| Property      | Type     | Required | Nullable       | Defined by                                                                                                                                                                                                                                                                                    |
| :------------ | :------- | :------- | :------------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [type](#type) | `string` | Required | cannot be null | [Insula platform STAC Extension] (insula-stac-extension-oneof-basic-collection-properties-allof-collection-type-attributes-properties-collection-type-constant.md) |

## type



`type`

* is required

* Type: `string` ([Collection type constant](insula-stac-extension-oneof-basic-collection-properties-allof-collection-type-attributes-properties-collection-type-constant.md))

* cannot be null

* defined in: [Insula platform STAC Extension] (insula-stac-extension-oneof-basic-collection-properties-allof-collection-type-attributes-properties-collection-type-constant.md)

### type Type

`string` ([Collection type constant](insula-stac-extension-oneof-basic-collection-properties-allof-collection-type-attributes-properties-collection-type-constant.md))

### type Constraints

**constant**: the value of this property must be equal to:

```json
"Collection"
```
